// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svelte/Message renders correctly - custom props 1`] = `
<div>
  <section
    class="ui-message strong"
    id="test"
  >
    MARKDOWN FOR *Test*, false
  </section>
</div>
`;

exports[`svelte/Message renders correctly - default props 1`] = `
<div>
  <section
    class="ui-message "
    id="test"
  >
    MARKDOWN FOR , false
  </section>
</div>
`;
